--- a/Tyuiu.MorozAD.Sprint7.ProjectV6/FormAbout.resx
+++ b/Tyuiu.MorozAD.Sprint7.ProjectV6/FormAbout.resx
@@ -117,13 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="toolTip_MAD.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>179, 17</value>
-  </metadata>
-  <metadata name="saveFileDialog_MAD.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="toolTip_MAD.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>179, 17</value>
-  </metadata>
+  <data name="labelAbout.Text" xml:space="preserve">
+    <value>Разработчик : Мороз А.Д
+группа Смартб-23-1
+
+Программа разработана в рамках изучения языка С#
+
+Тюменский индустриальный университет(с) 2023
+Вышская школа цифрых технологий(с) 2023
+
+Внутренние имя : Tyuiu.MorozAD.Sprint6.Task7.V20
+
+
+
+
+
+</value>
+  </data>
 </root>
