--- a/Tyuiu.MorozAD.Sprint7.ProjectV6/Properties/Resources.resx
+++ b/Tyuiu.MorozAD.Sprint7.ProjectV6/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="kartinki-znak-voprosa-31" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\kartinki-znak-voprosa-31.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="123" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\123.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
