--- a/Tyuiu.MorozAD.Sprint7.ProjectV6/Forms/FormDoctors.resx
+++ b/Tyuiu.MorozAD.Sprint7.ProjectV6/Forms/FormDoctors.resx
@@ -117,23 +117,36 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="doctor2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\doctor2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="labelDoctor4.Text" xml:space="preserve">
+    <value>Лео Бокерия — советский и российский врач-кардиохирург с мировым именем, изобретатель, 
+организатор медицинской науки, педагог, профессор. 
+Он является академиком РАН и РАМН и членом президиума РАМН. 
+Работает главным кардиохирургом Минздрава РФ и директором НЦССХ им. А. Н. Бакулева с 1994 года. 
+Лео Бокерия является президентом Общероссийской общественной организации «
+Лига здоровья нации» и членом Общественной палаты Российской Федерации.</value>
   </data>
-  <data name="doctor3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\doctor3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="labelDoctor3.Text" xml:space="preserve">
+    <value>Ренат Акчурин — знаменитый советский и российский кардиохирург,
+заслуженный академик Российской академии медицинских наук и Российской академии наук, 
+академик Академии наук Республики Башкортостан, почетный член Академии наук Республики Татарстан. 
+Он руководит отделом сердечно-сосудистой хирургии Института клинической кардиологии имени 
+А. Л. Мясникова Российского кардиологического научно-производственного центра РАМН. 
+Акчурин является руководителем государственной программы развития м
+едицины высоких технологий с 1998 года.</value>
   </data>
-  <data name="doctor1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\doctor1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="labelDoctor2.Text" xml:space="preserve">
+    <value>Александр Аганесов — широко известный доктор медицинских наук, профессор, 
+травматолог-ортопед высшей категории. 
+С 2002 года Аганесов руководит отделением хирургии позвоночника ФГБНУ 
+Российского научного центра хирургии им. Академика Б. В. Петровского, 
+он основал первый в Москве курс вертебрологии ФППО ММА им. И. М. 
+Сеченова, которым теперь заведует. Врач более 30 лет занимается хирургическим и консервативным 
+лечением больных с заболеваниями и травмами позвоночника и спинного мозга.</value>
   </data>
-  <data name="kartinki-znak-voprosa-31" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\kartinki-znak-voprosa-31.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="123" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\123.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="doctor4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\doctor4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="labelDoctor1.Text" xml:space="preserve">
+    <value>Леонид Рошаль — всемирно известный советский и российский педиатр и хирург, доктор медицинских наук, 
+профессор и общественный деятель. 
+С 2015 года он является президентом и директором НИИ неотложной детской хирургии и травматологии.
+</value>
   </data>
 </root>
